--- a/.eslintignore
+++ b/.eslintignore
@@ -18,3 +18,7 @@
 /.node_modules.ember-try/
 /bower.json.ember-try
 /package.json.ember-try
+
+# all annoyances
+/tests/dummy/templates/
+/addon/templates/
