--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "ember-cli-auto-suggest",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "1.0.0",
+  "description": "a simple auto suggester to use in your projects",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "auto-suggest",
+    "auto-suggest-input",
+    "auto-complete-input",
+    "local-auto-suggest",
+    "local-auto-complete",
+    "local-autocomplete"
   ],
   "repository": "",
   "license": "MIT",
@@ -21,7 +27,9 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.1.2"
+    "ember-cli-babel": "^7.1.2",
+    "ember-cli-htmlbars": "^3.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
@@ -29,8 +37,6 @@
     "ember-cli": "~3.6.0",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
